--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "sawo": "^1.0.1",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
